@@ -1,0 +1,2 @@
+<p><a class="externallink" rel="nofollow" title="http://example.com" href="http://example.com">http://example.com</a></p>
+<p>http://example.com</p>
